fix: fix global markup. remove duplicate examples

--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -24,8 +24,8 @@ The alert components are used to notify users of important information or change
 - Page alerts are light variants of alerts that are used locally on pages along with components or on its own to notify users of important information or changes on a page.
 - Global alerts are darker variants of alerts that are used to convey a globally important information that appears in the top area of the webpage.
 
-<Canvas of={AlertStories.alertInfo} />
-<Controls of={AlertStories.alertInfo} />
+<Canvas of={AlertStories.alert} />
+<Controls of={AlertStories.alert} />
 
 ### Loaded from an external API
 
