--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Canvas, Source } from "@storybook/addon-docs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as BodyUtilitiesStories from "./body-utilities.stories";
 
@@ -33,10 +33,6 @@ import * as BodyUtilitiesStories from "./body-utilities.stories";
 ## Background colour
 
 <Story of={BodyUtilitiesStories.backgroundColourUtils} />
-
-## Margin adjustment
-
-Coming soon
 
 ## Padding and margin adjustment
 
@@ -79,14 +75,6 @@ The classes are named using the format `uq{-property}-{-side}{-size}` where:
 
 `uq-margin--bottom-xs` applies `xs`(0.25rem) margin to the **bottom side**
 
-## Divider
-
-Coming soon
-
-## Highlight box
-
-Coming soon
-
 ## Visibility
 
 <Story of={BodyUtilitiesStories.visibilityUtils} />
@@ -98,6 +86,10 @@ Coming soon
 - `.show-for-print` - Add classname to element to show when printing
 - `.hide-for-print` - Add classname to element to hide when printing
 
-## Embedded media
+## Skip links
 
-Coming soon
+<Canvas of={BodyUtilitiesStories.skipLinks} code={`
+    <a href="#uq-header" class="visually-hidden focusable">Skip to header</a>
+    <a href="#uq-main" class="visually-hidden focusable">Skip to content</a>
+    <a href="#uq-footer" class="visually-hidden focusable">Skip to footer</a>
+`} />
