fix: update skip links doco, customize source code output

--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -10,31 +10,31 @@ import * as BodyUtilitiesStories from "./body-utilities.stories";
 
 <StatusBadge.DraftDoc />
 
-## Text colour
+### Text colour
 
 <Story of={BodyUtilitiesStories.textColorUtils} />
 
-## Text size
+### Text size
 
 <Story of={BodyUtilitiesStories.textSizeUtils} />
 
-## Text weight
+### Text weight
 
 <Story of={BodyUtilitiesStories.textWeightUtils} />
 
-## Text alignment
+### Text alignment
 
 <Story of={BodyUtilitiesStories.textAlignUtils} />
 
-## Text prettiers
+### Text prettiers
 
 <Story of={BodyUtilitiesStories.textPrettyUtils} />
 
-## Background colour
+### Background colour
 
 <Story of={BodyUtilitiesStories.backgroundColourUtils} />
 
-## Padding and margin adjustment
+### Padding and margin adjustment
 
 Use the padding and margin utility classes to customise spacing around elements.
 
@@ -69,24 +69,24 @@ The classes are named using the format `uq{-property}-{-side}{-size}` where:
 - `-s`
 - `-xs`
 
-### Examples
+#### Examples
 
 `uq-padding--uuul` applies `uuul`(5rem) padding to **all sides**
 
 `uq-margin--bottom-xs` applies `xs`(0.25rem) margin to the **bottom side**
 
-## Visibility
+### Visibility
 
 <Story of={BodyUtilitiesStories.visibilityUtils} />
 
 <br />
 
-### Print visibility
+#### Print visibility
 
 - `.show-for-print` - Add classname to element to show when printing
 - `.hide-for-print` - Add classname to element to hide when printing
 
-## Skip links
+### Skip links
 
 <Canvas of={BodyUtilitiesStories.skipLinks} code={`
     <a href="#uq-header" class="visually-hidden focusable">Skip to header</a>
