--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -88,8 +88,11 @@ The classes are named using the format `uq{-property}-{-side}{-size}` where:
 
 ### Skip links
 
-<Canvas of={BodyUtilitiesStories.skipLinks} code={`
+<Canvas
+  of={BodyUtilitiesStories.skipLinks}
+  code={`
     <a href="#uq-header" class="visually-hidden focusable">Skip to header</a>
     <a href="#uq-main" class="visually-hidden focusable">Skip to content</a>
     <a href="#uq-footer" class="visually-hidden focusable">Skip to footer</a>
-`} />
+`}
+/>
