--- a/packages/storybook-html/stories/introduction/get-started.mdx
+++ b/packages/storybook-html/stories/introduction/get-started.mdx
@@ -15,16 +15,11 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
         The Design system is in active use in current projects at UQ.
       </strong>
 
-      Our NPM packages are currently restricted to ITS-ADS staff with AWS tools
-      access. If you have access, please refer to the
+      Our NPM packages are currently restricted to ITS-ADS staff with AWS tools access.
 
-      <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">
-        environment setup instructions
-      </a>
+      If you have access, please refer to the <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw"> environment setup instructions</a>.
 
-      . If you do not have access, <a href="mailto:webservices@uq.edu.au">
-      contact us
-      </a> and we can package up styles and components for you to use in your project.
+      If you do not have access, <a href="mailto:webservices@uq.edu.au"> contact us</a> and we can package up styles and components for you to use in your project.
     </p>
 
   </div>
