--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Canvas, Source } from "@storybook/addon-docs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as BodyUtilitiesStories from "./body-utilities.stories";
 
@@ -10,35 +10,31 @@ import * as BodyUtilitiesStories from "./body-utilities.stories";
 
 <StatusBadge.DraftDoc />
 
-## Text colour
+### Text colour
 
 <Story of={BodyUtilitiesStories.textColorUtils} />
 
-## Text size
+### Text size
 
 <Story of={BodyUtilitiesStories.textSizeUtils} />
 
-## Text weight
+### Text weight
 
 <Story of={BodyUtilitiesStories.textWeightUtils} />
 
-## Text alignment
+### Text alignment
 
 <Story of={BodyUtilitiesStories.textAlignUtils} />
 
-## Text prettiers
+### Text prettiers
 
 <Story of={BodyUtilitiesStories.textPrettyUtils} />
 
-## Background colour
+### Background colour
 
 <Story of={BodyUtilitiesStories.backgroundColourUtils} />
 
-## Margin adjustment
-
-Coming soon
-
-## Padding and margin adjustment
+### Padding and margin adjustment
 
 Use the padding and margin utility classes to customise spacing around elements.
 
@@ -73,31 +69,30 @@ The classes are named using the format `uq{-property}-{-side}{-size}` where:
 - `-s`
 - `-xs`
 
-### Examples
+#### Examples
 
 `uq-padding--uuul` applies `uuul`(5rem) padding to **all sides**
 
 `uq-margin--bottom-xs` applies `xs`(0.25rem) margin to the **bottom side**
 
-## Divider
-
-Coming soon
-
-## Highlight box
-
-Coming soon
-
-## Visibility
+### Visibility
 
 <Story of={BodyUtilitiesStories.visibilityUtils} />
 
 <br />
 
-### Print visibility
+#### Print visibility
 
 - `.show-for-print` - Add classname to element to show when printing
 - `.hide-for-print` - Add classname to element to hide when printing
 
-## Embedded media
+### Skip links
 
-Coming soon
+<Canvas
+  of={BodyUtilitiesStories.skipLinks}
+  code={`
+    <a href="#uq-header" class="visually-hidden focusable">Skip to header</a>
+    <a href="#uq-main" class="visually-hidden focusable">Skip to content</a>
+    <a href="#uq-footer" class="visually-hidden focusable">Skip to footer</a>
+`}
+/>
