fix: remove redundant toc addon files. rename toc style overrides. update preview with toc config settings

--- a/packages/storybook-html/stories/components/body/body.mdx
+++ b/packages/storybook-html/stories/components/body/body.mdx
@@ -9,12 +9,12 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <StatusBadge.ReviewDoc />
 
-## Overview
+### Overview
 
 The `@uqds/body` package provides basic HTML element styles, basic print styles, and utility
 classes.
 
-## Install as a dependency
+### Install as a dependency
 
 ```bash
 npm i @uqds/body
@@ -24,7 +24,7 @@ npm i @uqds/body
 yarn add @uqds/body
 ```
 
-## Basic usage with Sass
+### Basic usage with Sass
 
 ```scss
 // With a namespace (recommended)
@@ -34,7 +34,7 @@ yarn add @uqds/body
 @use "@uqds/body/src/scss/_component" as *;
 ```
 
-## ⚠️ Encapsulating the styles (in Sass) for established projects
+### ⚠️ Encapsulating the styles (in Sass) for established projects
 
 This stylesheet can affect HTML elements globally and provides non-prefixed
 utility CSS classes. If you are modifying an existing project with base styles
