fix: add examples for visual regression purposes

--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -27,6 +27,26 @@ The alert components are used to notify users of important information or change
 <Canvas of={AlertStories.alert} />
 <Controls of={AlertStories.alert} />
 
+## Examples
+
+### Page
+
+{" "}
+
+<Canvas of={AlertStories.alertPageInfo} />
+<Canvas of={AlertStories.alertPageSuccess} />
+<Canvas of={AlertStories.alertPageWarning} />
+<Canvas of={AlertStories.alertPageError} />
+
+### Global
+
+{" "}
+
+<Canvas of={AlertStories.alertGlobalInfo} />
+<Canvas of={AlertStories.alertGlobalSuccess} />
+<Canvas of={AlertStories.alertGlobalWarning} />
+<Canvas of={AlertStories.alertGlobalError} />
+
 ### Loaded from an external API
 
 <Canvas
