--- a/packages/storybook-react/stories/Components/LoadingSpinner/LoadingSpinner.mdx
+++ b/packages/storybook-react/stories/Components/LoadingSpinner/LoadingSpinner.mdx
@@ -1,4 +1,10 @@
-import { Meta, Canvas, Controls, Description, Source } from "@storybook/addon-docs/blocks";
+import {
+  Meta,
+  Canvas,
+  Controls,
+  Description,
+  Source,
+} from "@storybook/addon-docs/blocks";
 import * as stories from "./LoadingSpinner.stories";
 
 <Meta of={stories} />
