--- a/packages/storybook-react/stories/Components/Table/Table.mdx
+++ b/packages/storybook-react/stories/Components/Table/Table.mdx
@@ -1,4 +1,10 @@
-import { Meta, Canvas, Controls, Description, Source } from "@storybook/addon-docs/blocks";
+import {
+  Meta,
+  Canvas,
+  Controls,
+  Description,
+  Source,
+} from "@storybook/addon-docs/blocks";
 import * as stories from "./Table.stories";
 
 <Meta of={stories} />
@@ -20,7 +26,7 @@ import { Table } from "@uqds/react";
 ```
 
 The Table component is a simple wrapper around the HTML `<table>` element but
-with appropriate CSS styles applied.  It should be used in place of, and in the
+with appropriate CSS styles applied. It should be used in place of, and in the
 same way as, the HTML `<table>`.
 
 See the Table component in the HTML UQDS guide for more details on expected use.
