--- a/packages/storybook-react/stories/Usage.mdx
+++ b/packages/storybook-react/stories/Usage.mdx
@@ -19,15 +19,15 @@ npm i @uqds/react
 Import the CSS in a top-level file, such as `App.tsx`.
 
 ```js
-import '@uqds/react/css';
+import "@uqds/react/css";
 ```
 
 In a React .tsx or .jsx file, import and use the components as needed.
 
 ```js
-import { TextInput } from '@uqds/react';
+import { TextInput } from "@uqds/react";
 
-<TextInput placeholder="Example" />
+<TextInput placeholder="Example" />;
 ```
 
 ## Component usage
